--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo-transparent.png" />
+    <link rel="icon" type="image/png" href="/Logo-DF-Transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#2563eb" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Fence Hub" />
     <meta name="description" content="Sales and operations management for discount fence installation" />
-    <link rel="apple-touch-icon" href="/logo-transparent.png" />
+    <link rel="apple-touch-icon" href="/Logo-DF-Transparent.png" />
     <title>Discount Fence Hub</title>
   </head>
   <body>
